# greentic-integration

./: .gitignore  Cargo.toml  Makefile  README.md  SECURITY_FIX_REPORT.md  all-code-scanning-alerts.json  pr-changed-files.txt  pr-comment.md
.codex/: ACT-PR-01.md  ACT-PR-03.md  ACT-PR-04.md  PR-00.md  PR-01.md  PR-02.md  PR-03.md  PR-04.md  PR-14.md  PR-14B.md  PR-14C.md  PR-GI-01-control.md  StatePR-05.md  global_rules.md  repo_overview.md
.codex/done/: ACT-PR-02.md  PR-04-integration-fixups.md  PR-14A.md
.codex/done/old/: PR-02.md  PR-07.md  PR-10.md  PR-12.md  PR-13.md  PR-14.md  PR-16.md  PR-17.md
.codex/old/: PR-01.md  PR-03.md  PR-04.md  PR-05.md  PR-06.md  PR-08,md  PR-09.md  PR-11.md  PR-15.md
.data/: sessions.json
.github/actions/ci-setup/: action.yml
.github/workflows/: ci.yml  e2e.yml  e2e_packs_oci.yml  integration.yml  nightly.yml
.greentic/.greentic/state/: secrets.toml
.greentic/cache/57183bcc54aa334cd56d1e2ef85cf18977d42836c5e1adc68938b9aa2300502e/: component.wasm  metadata.json
artifacts/fast2flow-release/latest/: env.sh
ci/: local_check.sh  nightly_local.sh
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/app/src/harness/: mod.rs  services.rs
crates/app/tests/: e2e_config_precedence.rs  e2e_events_publish.rs  e2e_greentic_dev_multi_pack.rs  e2e_greentic_dev_negative.rs  e2e_greentic_dev_offline.rs  e2e_greentic_dev_snapshot.rs  e2e_ingress_control.rs  e2e_mcp_pack_smoke.rs  e2e_messaging_dummy_send.rs  e2e_pack_lifecycle.rs  e2e_regression.rs  e2e_secrets_k8s_smoke.rs  e2e_stack_boot.rs  e2e_wrapper_canonical_parity.rs  events_manifest_guard.rs  flows_echo_pack.rs  pack_audit_oci.rs  pack_index_format.rs  pr13_greentic_dev_e2e.rs  pr14_provider_core_e2e.rs  sample_payloads.rs  state_pr05_conformance.rs
crates/app/tests/snapshots/: e2e_greentic_dev_snapshot__snap_pack_yaml.snap.new
crates/app/tests/support/: mod.rs
crates/greentic-integration-core/: Cargo.toml
crates/greentic-integration-core/src/: errors.rs  lib.rs  model.rs  parse.rs  substitute.rs
crates/greentic-integration-tester/: Cargo.toml
crates/greentic-integration-tester/src/: junit.rs  lib.rs  main.rs
crates/greentic-integration-tester/src/gtest/: executor.rs  mod.rs  parser.rs
crates/greentic-integration-tester/src/json/: assert.rs  diff.rs  mod.rs  normalize.rs
crates/greentic-integration-validator/: Cargo.toml
crates/greentic-integration-validator/src/: main.rs
crates/test-components/component-echo/: Cargo.toml  LICENSE  Makefile  README.md  component.manifest.json
crates/test-components/component-echo/.github/workflows/: ci.yml
crates/test-components/component-echo/schemas/io/: input.schema.json  output.schema.json
crates/test-components/component-echo/src/: lib.rs
crates/test-components/component-echo/tests/: conformance.rs
crates/test-components/component-echo/wit/: world.wit
crates/test-components/component-echo/wit-v060/: package.wit
crates/test-components/state-nocap-component/: Cargo.toml
crates/test-components/state-nocap-component/src/: lib.rs
crates/test-components/state-reader-component/: Cargo.toml
crates/test-components/state-reader-component/src/: lib.rs
crates/test-components/state-writer-component/: Cargo.toml
crates/test-components/state-writer-component/src/: lib.rs
crates/test-components/templating-component/: Cargo.toml
crates/test-components/templating-component/src/: lib.rs
crates/test-packs/echo-pack/: pack.lock.cbor  pack.lock.json  pack.yaml  regen-pack.sh  regen.sh
crates/test-packs/echo-pack/components/ai.greentic.component-echo/: component_echo.wasm
crates/test-packs/echo-pack/components/ai.greentic.component-echo/schemas/: component.schema.json
crates/test-packs/echo-pack/flows/: main.ygtc  main.ygtc.resolve.json  main.ygtc.resolve.summary.json
docs/: PINNING.md  README.md  debugging_e2e_tests.md  debugging_pack_audit.md  e2e_packs_from_oci.md  flake-triage.md  pack_audit.md
fixtures/fast2flow/: demo_app_flows.json
fixtures/inputs/: channel_message.json
samples/payloads/: channel_message.json
scripts/: build_e2e_fixtures.sh  e2e.sh  fetch_fast2flow_release.sh  fetch_greentic_binaries.sh  local_check.sh  make_pack_index.sh  oci_resolve_digests.sh  pin_repo.sh  run_all_tests.sh
tests/compose/: compose.e2e.yml
tests/fixtures/: sample.cbor  sample.json
tests/fixtures/packs/provider_events_dummy/: provider_events_dummy.gtpack
tests/fixtures/packs/provider_events_dummy/schemas/: config.example.json  config.schema.json  prompts.json  publish_event.json  validate_config.json
tests/fixtures/packs/provider_messaging_dummy/: provider_messaging_dummy.gtpack
tests/fixtures/packs/provider_messaging_dummy/schemas/: config.example.json  config.schema.json  prompts.json  send_message.json  validate_config.json
tests/fixtures/packs/provider_secrets_dummy/: provider_secrets_dummy.gtpack
tests/fixtures/packs/provider_secrets_dummy/schemas/: config.example.json  config.schema.json  get_secret.json  prompts.json  put_secret.json  validate_config.json
tests/gtests/: 00_smoke_validator.gtest  01_capture_and_expect.gtest  10_greentic_style_pack_flow_example.gtest  README.md  echo-pack-doctor.gtest
tests/gtests/smoke/: 01_basic.gtest  02_json_assert.gtest  03_trace_failure.gtest  04_fail_injection.gtest
tests/packs/: manifest.txt
