[workspace]
members = [
    "crates/app",
    "crates/deploy-plan-component",
    "crates/greentic-integration-core",
    "crates/greentic-integration-tester",
    "crates/greentic-integration-validator",
    "crates/test-components/component-echo",
    "crates/test-components/state-nocap-component",
    "crates/test-components/state-reader-component",
    "crates/test-components/state-writer-component",
    "crates/test-components/templating-component",
    "harness/providers-sim",
    "harness/runner-smoke",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
camino = { version = "1", features = ["serde1"] }
clap = { version = "4.5", features = ["derive"] }
directories = "6"
figment = { version = "0.10", features = ["toml", "env"] }
hex = "0.4"
notify = "8"
once_cell = "1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
serde_yaml_bw = "2"
sha2 = "0.10"
semver = { version = "1", features = ["serde"] }
thiserror = "2"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
ureq = { version = "3", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
tempfile = "3"
greentic-interfaces-guest = { version = "0.4", default-features = false, features = ["component-node"] }
greentic-types = "0.4"
async-nats = "0.45"
tokio-postgres = "0.7"
futures = "0.3"
toml = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
pathdiff = "0.2"
which = "8"
redis = { version = "1", features = ["connection-manager", "tokio-comp"] }
regex = "1"
urlencoding = "2"
tar = "0.4"
greentic-integration-core = { path = "crates/greentic-integration-core", version = "0.4.13" }
[workspace.package]
edition = "2024"
rust-version = "1.90"
version = "0.4.29"
description = "Greentic integration tooling and test runner"
license = "MIT"
repository = "https://github.com/greentic-ai/greentic-integration"
