[workspace]
members = [
    "crates/app",
    "crates/deploy-plan-component",
    "crates/greentic-integration-core",
    "crates/greentic-integration-tester",
    "crates/greentic-integration-validator",
    "crates/test-components/component-echo",
    "crates/test-components/state-nocap-component",
    "crates/test-components/state-reader-component",
    "crates/test-components/state-writer-component",
    "crates/test-components/templating-component",
    "harness/providers-sim",
    "harness/runner-smoke",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1.89"
axum = { version = "0.8", features = ["macros"] }
camino = { version = "1", features = ["serde1"] }
clap = { version = "4", features = ["derive"] }
ciborium = "0.2"
directories = "6"
flate2 = "1"
figment = { version = "0.10", features = ["toml", "env"] }
futures = "0.3"
greentic-distributor-client = "0.4.41"
greentic-integration-core = { path = "crates/greentic-integration-core", version = "0.4" }
greentic-interfaces-guest = { version = "0.4", default-features = false, features = ["component-node"] }
greentic-types = "0.4"
hex = "0.4"
humantime = "2"
insta = "1"
notify = "8"
once_cell = "1"
parking_lot = "0.12"
pathdiff = "0.2"
rayon = "1.10"
regex = "1"
redis = { version = "1", features = ["connection-manager", "tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"
serde_with = "3"
serde_yaml_bw = { package = "serde_yaml_gtc", version = "2.5.2" }
sha2 = "0.11"
semver = { version = "1", features = ["serde"] }
tar = "0.4"
tempfile = "3"
thiserror = "2"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "signal"] }
tokio-postgres = "0.7"
toml = "1"
tower = "0.5"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
ureq = { version = "3", features = ["json"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
wait-timeout = "0.2"
which = "8"
wit-bindgen = { version = "0.55", default-features = false, features = ["macros", "realloc"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
zstd = "0.13"
async-nats = "0.47"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
[workspace.package]
edition = "2024"
rust-version = "1.94"
version = "0.4.33"
description = "Greentic integration tooling and test runner"
license = "MIT"
repository = "https://github.com/greenticai/greentic-integration"
