[package]
name = "greentic-integration"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
axum.workspace = true
camino.workspace = true
clap.workspace = true
directories.workspace = true
figment.workspace = true
serde_with.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_bw.workspace = true
semver.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
parking_lot.workspace = true
uuid.workspace = true
notify.workspace = true
ureq.workspace = true
once_cell.workspace = true
greentic-types.workspace = true
greentic-distributor-client = { version = "0.4", features = ["pack-fetch"] }
async-nats.workspace = true
tokio-postgres.workspace = true
futures.workspace = true
toml.workspace = true
chrono.workspace = true
pathdiff.workspace = true
which.workspace = true
walkdir.workspace = true
redis.workspace = true
regex = "1"
flate2 = "1"
zstd = "0.13"
urlencoding.workspace = true
tar.workspace = true
zip = { version = "0.6", default-features = false, features = ["deflate"] }
humantime = "2"
tempfile.workspace = true

[dev-dependencies]
tower.workspace = true
insta = "1.39.0"
