[package]
name = "greentic-integration"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
camino.workspace = true
clap.workspace = true
directories.workspace = true
figment.workspace = true
serde_with.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_bw.workspace = true
semver.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
parking_lot.workspace = true
uuid.workspace = true
notify.workspace = true
ureq.workspace = true
once_cell.workspace = true
greentic-types.workspace = true
greentic-distributor-client.workspace = true
async-nats.workspace = true
tokio-postgres.workspace = true
futures.workspace = true
toml.workspace = true
chrono.workspace = true
pathdiff.workspace = true
which.workspace = true
walkdir.workspace = true
redis.workspace = true
regex.workspace = true
flate2.workspace = true
zstd.workspace = true
urlencoding.workspace = true
tar.workspace = true
zip.workspace = true
humantime.workspace = true
tempfile.workspace = true

[dev-dependencies]
tower.workspace = true
insta.workspace = true
