[package]
name = "greentic-integration-tester"
version.workspace = true
edition.workspace = true
default-run = "greentic-integration-tester"
description.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["bin"]
bin = []

[[bin]]
name = "greentic-integration-tester"
path = "src/main.rs"
required-features = ["bin"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
greentic-integration-core.workspace = true
greentic-types = { workspace = true, features = ["std"] }
serde_cbor.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile.workspace = true
wait-timeout.workspace = true
walkdir.workspace = true
rayon.workspace = true
regex.workspace = true
ciborium.workspace = true
