[package]
name = "greentic-integration-validator"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
regex.workspace = true
serde.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
